# hairpin

./: AGENTS.md  LICENSE  README.md  notes.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: countdown.hp  fib_mod.hp  list_reverse.hp  primes_50000.hp  run_benchmarks.py  string_roundtrip.hp
examples/: fib.hp  primes.hp  selfinterp.hp
hairpin/: __main__.py  bytecode.py  interpreter.py  primitives.py  repl.py  tokenizer.py  types.py
src/hairpin/: __init__.py  __main__.py  bytecode.py  interpreter.py  parser.py  primitives.py  repl.py  runtime_io.py  tokenizer.py  types.py
tests/: conftest.py  test_cli.py  test_integration.py  test_interpreter.py  test_lists.py  test_parser.py  test_repl.py  test_tokenizer.py
