[project]
name = 'hairpin'
version = '0.1.0'
description = 'A dynamically-typed, stack-based toy programming language with RPN syntax.'
readme = 'README.md'
requires-python = '>=3.13'
license = 'MIT'

[project.optional-dependencies]
dev = [
    'pytest>=8.0',
    'ruff>=0.15',
]

[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']

[tool.ruff]
line-length = 99
target-version = 'py313'

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I']
ignore = ['E501']

[tool.ruff.lint.per-file-ignores]
'benchmarks/run_benchmarks.py' = ['E402']

[tool.ruff.format]
quote-style = 'preserve'
